--- a/formulario.html
+++ b/formulario.html
@@ -13,21 +13,21 @@
     <div id="container">
         <!-- comentario html -->
         <p id="parrafo1" class="text-danger">este es un nuevo ejemplo para el ingreso de texto </p>
-        <p id="parrafo2">NUEVO EJEMPLO 2 DEL DOM EN UN TEXTO </p>
-        <p id="parrafo3">NUEVO EJEMPLO 3 DEL DOM EN UN TEXTO </p>
-        <p id="parrafo4">NUEVO EJEMPLO 4 DEL DOM EN UN TEXTO </p>
-        <p id="parrafo5">NUEVO EJEMPLO ÚLTIMO DEL DOM EN UN TEXTO</p>
+        <p id="parrafo2">En el año 2023, la tecnología había avanzado a pasos agigantados y se había convertido en una parte fundamental de la vida cotidiana de las personas.</p>
+        <p id="parrafo3"> la preocupación por el medio ambiente había llevado a un cambio significativo en la forma en que las empresas producían y consumían energía.</p>
+        <p id="parrafo4">En el ámbito de la salud, la medicina personalizada se había vuelto cada vez más común. Gracias a la tecnología, los médicos podían analizar el ADN de los pacientes y crear tratamientos específicos para sus necesidades individuales. </p>
+        <p id="parrafo5">el transporte también había experimentado cambios significativos. Los coches eléctricos se habían vuelto mucho más accesibles y los sistemas de transporte público se habían modernizado con la incorporación de tecnologías avanzadas</p>
     </div>
     <div class="container mt-5">
         <div class="row justify-content-center mt-2">
           <form action="/nueva_pagina/controladores/visita/guardar.php" method="POST" class="col-lg-8 border bg-light p-3">
             <div class="row mb-3">
               <div class="col">
-                <label for="nombre" class="form-label">Ingrese el Nombre de la Persona Visitante</label>
+                <label for="nombre" class="form-label">Ingrese el Nombre </label>
                 <input type="text" name="nombre" id="nombre" class="form-control" required>
               </div>
               <div class="col">
-                <label for="dpi" class="form-label">Ingrese el Número de DPI</label>
+                <label for="dpi" class="form-label">Ingrese el Número de Documento de Identidad</label>
                 <input type="number" name="dpi" id="dpi" class="form-control" required>
               </div>
               <div class="col">
