--- a/formulario.html
+++ b/formulario.html
@@ -27,15 +27,15 @@
                 <input type="text" name="nombre" id="nombre" class="form-control" required>
               </div>
               <div class="col">
-                <label for="dpi" class="form-label">Ingrese el Número de Documento de Identidad</label>
+                <label for="dpi" class="form-label">Ingrese Documento de Identidad</label>
                 <input type="number" name="dpi" id="dpi" class="form-control" required>
               </div>
               <div class="col">
-                <label for="hora_ingreso" class="form-label">Ingrese la Hora de Ingreso</label>
+                <label for="hora_ingreso" class="form-label">Ingrese Hora de Ingreso</label>
                 <input type="datetime-local" name="hora_ingreso" id="hora_ingreso" class="form-control" required>
               </div>
               <div class="col">
-                <label id="label_hora_salida" for="hora_salida" class="form-label">Ingrese la Hora de Salida</label>
+                <label id="label_hora_salida" for="hora_salida" class="form-label">Ingrese Hora de Salida</label>
                 <input type="datetime-local" name="hora_salida" id="hora_salida" class="form-control" >
               </div>
             </div>
