--- a/formulario.html
+++ b/formulario.html
@@ -7,7 +7,7 @@
     <title>Nueva Página</title>
 </head>
 <body>
-  <h1 id="titulo" class="text-danger fw-bold">NUEVA PÁGINA</h1>
+  <h1 id="titulo" class="text-danger fw-bold">ESTA ES LA PAGINA DE PRUEBA </h1>
     <button id="botonIniciar">INICIAR</button>
     <br>
     <div id="container">
